tests/snapshots/snapshot_provider_test__snapshot_open_meteo_dashboard.snap
---
source: tests/snapshot_provider_test.rs
expression: svg_content
---
<svg width="800" height="480" font-family="Roboto, sans-serif" xmlns="http://www.w3.org/2000/svg">

    <!-- tspan doesn't work well with the degree symbol ° for some fonts!-->
    <!-- Avoid using tspan with text-anchor, `dx` or `dy`, resvg doesn't handle it properly -->
    <!-- see https://github.com/linebender/resvg/issues/583 -->

    <defs>
        <linearGradient id="fillGradient" x1="0%" y1="100%" x2="0%" y2="0%">
            <stop offset="0%" stop-color="blue" stop-opacity="0.5" />
            <stop offset="100%" stop-color="blue" stop-opacity="0.1" />
        </linearGradient>
        <pattern id="dots" patternUnits="userSpaceOnUse" width="10" height="10">
            <circle cx="5" cy="5" r="2" fill="blue" />
        </pattern>
        <pattern id="grid" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 10 0 L 0 0 0 10" fill="none" stroke="blue" stroke-width="1" />
        </pattern>
        <pattern id="diagonal-lines" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 10 L 10 0" stroke="blue" stroke-width="2" />
        </pattern>
        <pattern id="crosshatch" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 0 L 10 10 M 10 0 L 0 10" stroke="blue" stroke-width="1" />
        </pattern>
    </defs>

    <rect width="100%" height="100%" fill="black" />

    <!-- Current Day Information -->
    <text x="400" y="50" font-size="35" fill="white" text-anchor="middle">Friday, 24 October</text>
    <image x="0" y="0" width="200" height="180" href="static/fill-svg-static/partly-cloudy-night.svg" />


    <!-- Current temperature summary -->
    <svg x="650" y="0" font-size="10" text-anchor="start">
        <text x="0" y="28" font-size="28" fill="red">16°C / 60°F</text>
        <text x="0" y="52" font-size="16" fill="white">H N/A</text>
        <text x="0" y="73" font-size="16" fill="white">L N/A</text>
    </svg>

    <!-- Feels Like temperature -->
    <text x="246" y="118" text-anchor="middle" font-size="18" fill="white">
        <tspan>Feels</tspan>
        <tspan dy="15.5" dx="-46.6">Like</tspan>
        <tspan font-family="Roboto-Regular-Dashed" dominant-baseline="middle" font-size="55" fill="green"
            dx="10" dy="-7">
            15
            <tspan baseline-shift="12" dx="-15" font-size="30">°C</tspan>
        </tspan>
    </text>

    <!-- Diagnostic Message -->
    <svg x="580" y="0" width="200" height="100" text-anchor="middle" visibility="visible">
        <!-- Cascading diagnostic icons (stacked by priority) -->
        <image x="63" y="-10" width="74" height="74" href="static/fill-svg-static/code-yellow.svg"/>
        <!-- Message for highest priority error only -->
        <text x="100" y="60" width="200" font-size="12">
            Incomplete Data
        </text>
    </svg>

    <!-- Sunset/Sunrise Information -->
    <svg x="30" y="150">
        <image x="0" y="0" width="75" height="75" href="static/fill-svg-static/sunrise.svg" />
        <text x="12" y="70" text-anchor="start" font-size="20" fill="white">N/A</text>

        <image x="70" y="0" width="75" height="75" href="static/fill-svg-static/sunset.svg" />
        <text x="83" y="70" text-anchor="start" font-size="20" fill="white">N/A</text>
    </svg>

    <g transform="translate(-15, 0)">

        <!-- vertical lines with artistic variations -->
        <svg class="line">
            <path d="M95 240 C90 220, 95 320, 95 470" />
            <path d="M150 240 C155 220, 145 320, 150 470" />

            <!-- horizontal lines with artistic variations -->
            <path d="M40 260 C150 261, 250 258, 185 260" />
            <path d="M40 330 C150 325, 250 335, 185 330" />
            <path d="M40 400 C150 402, 250 399, 185 400" />
        </svg>

        <!-- row header-->
        <svg x="15" y="210" label="UV-index" text-anchor="start">
            <text x="16" y="43.5" fill="white" font-size="20">Metric
            </text>

            <text x="85" y="43.5" fill="white" font-size="20">Now
            </text>
            <text x="140" y="43.5" fill="white" font-size="20">Max
                <tspan baseline-shift="super" font-size="17" dx="-3">24h</tspan>
            </text>
        </svg>

        <!-- UV Index -->
        <svg x="20" y="260" label="UV-index" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/uv-index-high.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">6
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="normal">7
            </text>
        </svg>

        <!-- Wind Information -->
        <svg x="20" y="330" label="wind" text-anchor="middle">
            <text x="42.2" y="66.2" fill="white" font-size="15.1" text-anchor="middle">
                km/h
            </text>
            <image width="75" height="75" href="static/fill-svg-static/wind.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">6
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">16
            </text>
        </svg>

        <!-- Relative Humidity -->
        <svg x="20" y="400" label="relative_humidity" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/humidity-plus.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">60
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">91
            </text>
        </svg>
    </g>


    <!-- Forecast for the next 6 days -->
    <svg x="292" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Sat</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day-drizzle.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">19°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">13°</tspan>
        </text>
    </svg>

    <svg x="373" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Sun</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day-drizzle.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">23°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="454" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Mon</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">13°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">6°</tspan>
        </text>
    </svg>

    <svg x="535" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Tue</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">17°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="616" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Wed</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">18°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="697" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Thu</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">19°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <!-- Graph for hourly forecast -->
    <svg x="220" y="160" width="560" height="350" viewBox="-50 0 690 300" preserveAspectRatio="xMidYMid meet"
        style="overflow: visible;">
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <!-- X axis Guidelines -->
        <path stroke="white" stroke-linejoin="round" stroke-width="1" d="M 0 300 L 600 300 M 0 300 v -300 m 0 2 v -2 M 100 300 v -300 m 0 2 v -2 M 200 300 v -300 m 0 2 v -2 M 300 300 v -300 m 0 2 v -2 M 400 300 v -300 m 0 2 v -2 M 500 300 v -300 m 0 2 v -2 M 600 300 v -300 m 0 2 v -2" fill="none"
            stroke-dasharray="5,10" />
        <!-- X Labels -->
        <text x="0" y="320" fill="white" font-size="19" text-anchor="middle">9pm</text><text x="100" y="320" fill="white" font-size="19" text-anchor="middle">1am</text><text x="200" y="320" fill="white" font-size="19" text-anchor="middle">5am</text><text x="300" y="320" fill="white" font-size="19" text-anchor="middle">9am</text><text x="400" y="320" fill="white" font-size="19" text-anchor="middle">1pm</text><text x="500" y="320" fill="white" font-size="19" text-anchor="middle">5pm</text><text x="600" y="320" fill="white" font-size="19" text-anchor="middle">9pm</text><line x1="75" y1="0" x2="75" y2="300" stroke="white" stroke-width="2" stroke-dasharray="3,3" />
                   <text x="85" y="170" fill="white" font-size="19" font-style="italic"  transform="rotate(-90, 55, 135)" text-anchor="start">Saturday</text>
        <!-- Y Labels -->
        <text x="-10" y="300"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">0°</text><text x="-10" y="240"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">4.0°</text><text x="-10" y="180"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">8.0°</text><text x="-10" y="120"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">12.0°</text><text x="-10" y="60"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">16.0°</text><text x="-10" y="0"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">20°</text>
        <!-- Y right Labels -->
        <text x="610" y="300" fill="white"  font-size="19" text-anchor="start" dy="4">0%</text><text x="610" y="240" fill="white"  font-size="19" text-anchor="start" dy="4">20%</text><text x="610" y="180" fill="white"  font-size="19" text-anchor="start" dy="4">40%</text><text x="610" y="120" fill="white"  font-size="19" text-anchor="start" dy="4">60%</text><text x="610" y="60" fill="white"  font-size="19" text-anchor="start" dy="4">80%</text><text x="610" y="0" fill="white"  font-size="19" text-anchor="start" dy="4">100%</text>
        <path stroke="red" stroke-linejoin="round" transform="translate(0, 300) scale(1, -1)"
            d="M 0.0000 244.7500C 34.7826 257.5000, 43.4783 263.0000, 52.1739 267.0000C 60.8696 271.0000, 69.5652 276.7500, 78.2609 277.5000C 86.9565 278.2500, 95.6522 280.0000, 104.3478 271.5000C 113.0435 263.0000, 121.7391 235.2500, 130.4348 226.5000C 139.1304 217.7500, 147.8261 221.5000, 156.5217 219.0000C 165.2174 216.5000, 173.9130 213.7500, 182.6087 211.5000C 191.3043 209.2500, 200.0000 207.2500, 208.6956 205.5000C 217.3913 203.7500, 226.0870 201.5000, 234.7826 201.0000C 243.4783 200.5000, 252.1739 202.0000, 260.8696 202.5000C 269.5652 203.0000, 278.2609 203.7500, 286.9565 204.0000C 295.6521 204.2500, 304.3478 204.2500, 313.0435 204.0000C 321.7391 203.7500, 330.4348 203.2500, 339.1304 202.5000C 347.8261 201.7500, 356.5217 200.5000, 365.2174 199.5000C 373.9131 198.5000, 382.6087 197.0000, 391.3044 196.5000C 400.0000 196.0000, 408.6956 196.2500, 417.3913 196.5000C 426.0869 196.7500, 434.7826 197.5000, 443.4782 198.0000C 452.1739 198.5000, 460.8696 198.5000, 469.5652 199.5000C 478.2609 200.5000, 486.9565 200.2500, 495.6522 204.0000C 504.3478 207.7500, 513.0435 216.2500, 521.7391 222.0000C 530.4348 227.7500, 539.1304 234.5000, 547.8260 238.5000C 556.5217 242.5000, 565.2173 243.7500, 573.9130 246.0000C 582.6086 248.2500, 595.6522 251.0000, 600.0000 252.0000" stroke-width="3.0" fill="none" />
        <path stroke="green" stroke-linejoin="round" stroke-dasharray="5,5"
            transform="translate(0, 300) scale(1, -1)" d="M 0.0000 223.5000C 34.7826 236.0000, 43.4783 246.5000, 52.1739 252.0000C 60.8696 257.5000, 69.5652 263.2500, 78.2609 264.0000C 86.9565 264.7500, 95.6522 265.0000, 104.3478 256.5000C 113.0435 248.0000, 121.7391 221.5000, 130.4348 213.0000C 139.1304 204.5000, 147.8261 207.7500, 156.5217 205.5000C 165.2174 203.2500, 173.9130 200.7500, 182.6087 199.5000C 191.3043 198.2500, 200.0000 198.5000, 208.6956 198.0000C 217.3913 197.5000, 226.0870 195.7500, 234.7826 196.5000C 243.4783 197.2500, 252.1739 201.0000, 260.8696 202.5000C 269.5652 204.0000, 278.2609 205.2500, 286.9565 205.5000C 295.6521 205.7500, 304.3478 205.2500, 313.0435 204.0000C 321.7391 202.7500, 330.4348 200.2500, 339.1304 198.0000C 347.8261 195.7500, 356.5217 192.0000, 365.2174 190.5000C 373.9131 189.0000, 382.6087 189.5000, 391.3044 189.0000C 400.0000 188.5000, 408.6956 187.2500, 417.3913 187.5000C 426.0869 187.7500, 434.7826 190.0000, 443.4782 190.5000C 452.1739 191.0000, 460.8696 189.7500, 469.5652 190.5000C 478.2609 191.2500, 486.9565 193.0000, 495.6522 195.0000C 504.3478 197.0000, 513.0435 200.0000, 521.7391 202.5000C 530.4348 205.0000, 539.1304 207.0000, 547.8260 210.0000C 556.5217 213.0000, 565.2173 216.7500, 573.9130 220.5000C 582.6086 224.2500, 595.6522 230.5000, 600.0000 232.5000" stroke-width="3.0" fill="none" />
        <path transform="translate(0, 300) scale(1, -1)" d="M 0.0000 15.0000L 26.086956 54L 52.173912 90L 78.260864 84L 104.347824 45L 130.43478 90L 156.52173 99L 182.60869 90L 208.69565 54L 234.78261 30L 260.86957 54L 286.9565 69L 313.04346 174L 339.13043 234L 365.21738 240L 391.30435 279L 417.3913 255L 443.47824 234L 469.56522 180L 495.65216 129L 521.73914 99L 547.82605 120L 573.913 99L 600 135 L 600 0 L 0 0Z" fill="blue"
            fill-opacity="25%" />
        <defs>
            <linearGradient id="UVGradient" gradientUnits="objectBoundingBox" x1="0%" y1="0%" x2="100%" y2="0%">
                <stop offset="0.00%" stop-color="orange"/><stop offset="4.35%" stop-color="orange"/><stop offset="8.70%" stop-color="orange"/><stop offset="13.04%" stop-color="yellow"/><stop offset="17.39%" stop-color="green"/><stop offset="21.74%" stop-color="green"/><stop offset="26.09%" stop-color="green"/><stop offset="30.43%" stop-color="white"/><stop offset="34.78%" stop-color="white"/><stop offset="39.13%" stop-color="white"/><stop offset="43.48%" stop-color="white"/><stop offset="47.83%" stop-color="white"/><stop offset="52.17%" stop-color="white"/><stop offset="56.52%" stop-color="white"/><stop offset="60.87%" stop-color="white"/><stop offset="65.22%" stop-color="white"/><stop offset="69.57%" stop-color="white"/><stop offset="73.91%" stop-color="white"/><stop offset="78.26%" stop-color="white"/><stop offset="82.61%" stop-color="white"/><stop offset="86.96%" stop-color="white"/><stop offset="91.30%" stop-color="white"/><stop offset="95.65%" stop-color="white"/><stop offset="100.00%" stop-color="green"/>
            </linearGradient>
        </defs>
        <rect x="0" y="-14" width="600" height="8" fill="url(#UVGradient)" />
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <path stroke="red" stroke-linejoin="round" stroke-width="2" d="M 0 0 L 0 300 M -5 300 L 5 300 M -5 240 L 5 240 M -5 180 L 5 180 M -5 120 L 5 120 M -5 60 L 5 60 M -5 0 L 5 0" />
        <path stroke="blue" stroke-linejoin="round" stroke-width="3" d="M 600 0 L 600 300 M 595 300 L 605 300 M 595 240 L 605 240 M 595 180 L 605 180 M 595 120 L 605 120 M 595 60 L 605 60 M 595 0 L 605 0"
            fill="none" />
    </svg>
    <!-- These are needed render svg in browser/ide -->
    <style>
        @font-face {
            font-family: 'Roboto';
            src: url('static/fonts/Roboto-Regular.ttf') format('truetype');
        }

        @font-face {
            font-family: 'Roboto-Regular-Dashed';
            src: url('static/fonts/Roboto-Regular-Dashed.ttf') format('truetype');
        }

        .line {
            stroke: white;
            stroke-width: 2;
            stroke-linecap: round;
            stroke-linejoin: round;
        }
    </style>
</svg>
