tests/snapshots/snapshot_provider_test__snapshot_open_meteo_early_morning.snap
---
source: tests/snapshot_provider_test.rs
expression: svg_content
---
<svg width="800" height="480" font-family="Roboto, sans-serif" xmlns="http://www.w3.org/2000/svg">

    <!-- tspan doesn't work well with the degree symbol ° for some fonts!-->
    <!-- Avoid using tspan with text-anchor, `dx` or `dy`, resvg doesn't handle it properly -->
    <!-- see https://github.com/linebender/resvg/issues/583 -->

    <defs>
        <linearGradient id="fillGradient" x1="0%" y1="100%" x2="0%" y2="0%">
            <stop offset="0%" stop-color="blue" stop-opacity="0.5" />
            <stop offset="100%" stop-color="blue" stop-opacity="0.1" />
        </linearGradient>
        <pattern id="dots" patternUnits="userSpaceOnUse" width="10" height="10">
            <circle cx="5" cy="5" r="2" fill="blue" />
        </pattern>
        <pattern id="grid" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 10 0 L 0 0 0 10" fill="none" stroke="blue" stroke-width="1" />
        </pattern>
        <pattern id="diagonal-lines" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 10 L 10 0" stroke="blue" stroke-width="2" />
        </pattern>
        <pattern id="crosshatch" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 0 L 10 10 M 10 0 L 0 10" stroke="blue" stroke-width="1" />
        </pattern>
    </defs>

    <rect width="100%" height="100%" fill="black" />

    <!-- Current Day Information -->
    <text x="400" y="50" font-size="35" fill="white" text-anchor="middle">Saturday, 25 October</text>
    <image x="0" y="0" width="200" height="180" href="static/fill-svg-static/extreme-night-rain.svg" />


    <!-- Current temperature summary -->
    <svg x="650" y="0" font-size="10" text-anchor="start">
        <text x="0" y="28" font-size="28" fill="red">14°C / 58°F</text>
        <text x="0" y="52" font-size="16" fill="white">H 19°C / 65°F</text>
        <text x="0" y="73" font-size="16" fill="white">L 13°C / 56°F</text>
    </svg>

    <!-- Feels Like temperature -->
    <text x="246" y="118" text-anchor="middle" font-size="18" fill="white">
        <tspan>Feels</tspan>
        <tspan dy="15.5" dx="-46.6">Like</tspan>
        <tspan font-family="Roboto-Regular-Dashed" dominant-baseline="middle" font-size="55" fill="green"
            dx="10" dy="-7">
            13
            <tspan baseline-shift="12" dx="-15" font-size="30">°C</tspan>
        </tspan>
    </text>

    <!-- Diagnostic Message -->
    <svg x="580" y="0" width="200" height="100" text-anchor="middle" visibility="hidden">
        <!-- Cascading diagnostic icons (stacked by priority) -->
        
        <!-- Message for highest priority error only -->
        <text x="100" y="60" width="200" font-size="12">
            N/A
        </text>
    </svg>

    <!-- Sunset/Sunrise Information -->
    <svg x="30" y="150">
        <image x="0" y="0" width="75" height="75" href="static/fill-svg-static/sunrise.svg" />
        <text x="12" y="70" text-anchor="start" font-size="20" fill="white">06:21</text>

        <image x="70" y="0" width="75" height="75" href="static/fill-svg-static/sunset.svg" />
        <text x="83" y="70" text-anchor="start" font-size="20" fill="white">19:47</text>
    </svg>

    <g transform="translate(-15, 0)">

        <!-- vertical lines with artistic variations -->
        <svg class="line">
            <path d="M95 240 C90 220, 95 320, 95 470" />
            <path d="M150 240 C155 220, 145 320, 150 470" />

            <!-- horizontal lines with artistic variations -->
            <path d="M40 260 C150 261, 250 258, 185 260" />
            <path d="M40 330 C150 325, 250 335, 185 330" />
            <path d="M40 400 C150 402, 250 399, 185 400" />
        </svg>

        <!-- row header-->
        <svg x="15" y="210" label="UV-index" text-anchor="start">
            <text x="16" y="43.5" fill="white" font-size="20">Metric
            </text>

            <text x="85" y="43.5" fill="white" font-size="20">Now
            </text>
            <text x="140" y="43.5" fill="white" font-size="20">Max
                <tspan baseline-shift="super" font-size="17" dx="-3">24h</tspan>
            </text>
        </svg>

        <!-- UV Index -->
        <svg x="20" y="260" label="UV-index" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/uv-index-none.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">0
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="normal">5
            </text>
        </svg>

        <!-- Wind Information -->
        <svg x="20" y="330" label="wind" text-anchor="middle">
            <text x="42.2" y="66.2" fill="white" font-size="15.1" text-anchor="middle">
                km/h
            </text>
            <image width="75" height="75" href="static/fill-svg-static/wind.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">7
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">21
            </text>
        </svg>

        <!-- Relative Humidity -->
        <svg x="20" y="400" label="relative_humidity" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/humidity-plus-plus.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">91
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="normal">91
            </text>
        </svg>
    </g>


    <!-- Forecast for the next 6 days -->
    <svg x="292" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Sun</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day-drizzle.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">23°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="373" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Mon</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">13°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">6°</tspan>
        </text>
    </svg>

    <svg x="454" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Tue</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">17°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="535" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Wed</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">18°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="616" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Thu</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">19°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="697" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Fri</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/partly-cloudy-day-drizzle.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">25°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">13°</tspan>
        </text>
    </svg>

    <!-- Graph for hourly forecast -->
    <svg x="220" y="160" width="560" height="350" viewBox="-50 0 690 300" preserveAspectRatio="xMidYMid meet"
        style="overflow: visible;">
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <!-- X axis Guidelines -->
        <path stroke="white" stroke-linejoin="round" stroke-width="1" d="M 0 300 L 600 300 M 0 300 v -300 m 0 2 v -2 M 100 300 v -300 m 0 2 v -2 M 200 300 v -300 m 0 2 v -2 M 400 300 v -300 m 0 2 v -2 M 500 300 v -300 m 0 2 v -2 M 600 300 v -300 m 0 2 v -2" fill="none"
            stroke-dasharray="5,10" />
        <!-- X Labels -->
        <text x="0" y="320" fill="white" font-size="19" text-anchor="middle">12pm</text><text x="100" y="320" fill="white" font-size="19" text-anchor="middle">4pm</text><text x="200" y="320" fill="white" font-size="19" text-anchor="middle">8pm</text><text x="300" y="320" fill="white" font-size="19" text-anchor="middle">12am</text><text x="400" y="320" fill="white" font-size="19" text-anchor="middle">4am</text><text x="500" y="320" fill="white" font-size="19" text-anchor="middle">8am</text><text x="600" y="320" fill="white" font-size="19" text-anchor="middle">12pm</text><line x1="300" y1="0" x2="300" y2="300" stroke="white" stroke-width="2" stroke-dasharray="3,3" />
                   <text x="310" y="170" fill="white" font-size="19" font-style="italic"  transform="rotate(-90, 280, 135)" text-anchor="start">Sunday</text>
        <!-- Y Labels -->
        <text x="-10" y="300"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">0°</text><text x="-10" y="240"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">4.6°</text><text x="-10" y="180"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">9.1°</text><text x="-10" y="119.999985"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">13.7°</text><text x="-10" y="60"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">18.2°</text><text x="-10" y="0"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">23°</text>
        <!-- Y right Labels -->
        <text x="610" y="300" fill="white"  font-size="19" text-anchor="start" dy="4">0%</text><text x="610" y="240" fill="white"  font-size="19" text-anchor="start" dy="4">20%</text><text x="610" y="180" fill="white"  font-size="19" text-anchor="start" dy="4">40%</text><text x="610" y="120" fill="white"  font-size="19" text-anchor="start" dy="4">60%</text><text x="610" y="60" fill="white"  font-size="19" text-anchor="start" dy="4">80%</text><text x="610" y="0" fill="white"  font-size="19" text-anchor="start" dy="4">100%</text>
        <path stroke="red" stroke-linejoin="round" transform="translate(0, 300) scale(1, -1)"
            d="M 0.0000 172.3684C 34.7826 172.5877, 43.4783 173.2456, 52.1739 173.6842C 60.8696 174.1228, 69.5652 174.1228, 78.2609 175.0000C 86.9565 175.8772, 95.6522 175.6579, 104.3478 178.9474C 113.0435 182.2368, 121.7391 189.6930, 130.4348 194.7368C 139.1304 199.7807, 147.8261 205.7018, 156.5217 209.2105C 165.2174 212.7193, 173.9130 213.8158, 182.6087 215.7895C 191.3043 217.7631, 200.0000 219.0789, 208.6956 221.0526C 217.3913 223.0263, 226.0870 221.0526, 234.7826 227.6316C 243.4783 234.2105, 252.1739 250.6579, 260.8696 260.5263C 269.5652 270.3947, 278.2609 280.2632, 286.9565 286.8421C 295.6521 293.4211, 304.3478 306.1404, 313.0435 300.0000C 321.7391 293.8596, 330.4348 260.0877, 339.1304 250.0000C 347.8261 239.9123, 356.5217 241.4474, 365.2174 239.4737C 373.9131 237.5000, 382.6087 241.8860, 391.3044 238.1579C 400.0000 234.4299, 408.6956 223.2456, 417.3913 217.1053C 426.0869 210.9649, 434.7826 205.7018, 443.4782 201.3158C 452.1739 196.9298, 460.8696 193.8596, 469.5652 190.7895C 478.2609 187.7193, 486.9565 185.3070, 495.6522 182.8947C 504.3478 180.4825, 513.0435 178.0702, 521.7391 176.3158C 530.4348 174.5614, 539.1304 173.9035, 547.8260 172.3684C 556.5217 170.8333, 565.2173 169.0789, 573.9130 167.1053C 582.6086 165.1316, 595.6522 161.6228, 600.0000 160.5263" stroke-width="3.0" fill="none" />
        <path stroke="green" stroke-linejoin="round" stroke-dasharray="5,5"
            transform="translate(0, 300) scale(1, -1)" d="M 0.0000 165.5702C 34.7826 164.6930, 43.4783 166.6667, 52.1739 167.1053C 60.8696 167.5439, 69.5652 166.4474, 78.2609 167.1053C 86.9565 167.7632, 95.6522 169.2983, 104.3478 171.0526C 113.0435 172.8070, 121.7391 175.4386, 130.4348 177.6316C 139.1304 179.8246, 147.8261 181.5790, 156.5217 184.2105C 165.2174 186.8421, 173.9130 190.1316, 182.6087 193.4211C 191.3043 196.7105, 200.0000 200.4386, 208.6956 203.9474C 217.3913 207.4561, 226.0870 206.1403, 234.7826 214.4737C 243.4783 222.8070, 252.1739 242.5438, 260.8696 253.9474C 269.5652 265.3509, 278.2609 276.0965, 286.9565 282.8947C 295.6521 289.6930, 304.3478 302.6316, 313.0435 294.7368C 321.7391 286.8421, 330.4348 247.5877, 339.1304 235.5263C 347.8261 223.4649, 356.5217 223.4649, 365.2174 222.3684C 373.9131 221.2719, 382.6087 232.0175, 391.3044 228.9474C 400.0000 225.8772, 408.6956 212.0614, 417.3913 203.9474C 426.0869 195.8333, 434.7826 185.0877, 443.4782 180.2632C 452.1739 175.4386, 460.8696 177.4123, 469.5652 175.0000C 478.2609 172.5877, 486.9565 168.4211, 495.6522 165.7895C 504.3478 163.1579, 513.0435 161.4035, 521.7391 159.2105C 530.4348 157.0176, 539.1304 156.1404, 547.8260 152.6316C 556.5217 149.1228, 565.2173 143.6404, 573.9130 138.1579C 582.6086 132.6754, 595.6522 122.8070, 600.0000 119.7368" stroke-width="3.0" fill="none" />
        <path transform="translate(0, 300) scale(1, -1)" d="M 0.0000 279.0000L 26.086956 255L 52.173912 234L 78.260864 180L 104.347824 129L 130.43478 99L 156.52173 120L 182.60869 99L 208.69565 135L 234.78261 165L 260.86957 144L 286.9565 144L 313.04346 195L 339.13043 240L 365.21738 264L 391.30435 279L 417.3913 249L 443.47824 210L 469.56522 150L 495.65216 105L 521.73914 105L 547.82605 99L 573.913 135L 600 120 L 600 0 L 0 0Z" fill="blue"
            fill-opacity="25%" />
        <defs>
            <linearGradient id="UVGradient" gradientUnits="objectBoundingBox" x1="0%" y1="0%" x2="100%" y2="0%">
                <stop offset="0.00%" stop-color="white"/><stop offset="4.35%" stop-color="white"/><stop offset="8.70%" stop-color="white"/><stop offset="13.04%" stop-color="white"/><stop offset="17.39%" stop-color="white"/><stop offset="21.74%" stop-color="white"/><stop offset="26.09%" stop-color="white"/><stop offset="30.43%" stop-color="white"/><stop offset="34.78%" stop-color="green"/><stop offset="39.13%" stop-color="yellow"/><stop offset="43.48%" stop-color="yellow"/><stop offset="47.83%" stop-color="white"/><stop offset="52.17%" stop-color="yellow"/><stop offset="56.52%" stop-color="green"/><stop offset="60.87%" stop-color="green"/><stop offset="65.22%" stop-color="yellow"/><stop offset="69.57%" stop-color="green"/><stop offset="73.91%" stop-color="white"/><stop offset="78.26%" stop-color="white"/><stop offset="82.61%" stop-color="white"/><stop offset="86.96%" stop-color="white"/><stop offset="91.30%" stop-color="white"/><stop offset="95.65%" stop-color="white"/><stop offset="100.00%" stop-color="white"/>
            </linearGradient>
        </defs>
        <rect x="0" y="-14" width="600" height="8" fill="url(#UVGradient)" />
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <path stroke="red" stroke-linejoin="round" stroke-width="2" d="M 0 0 L 0 300 M -5 300 L 5 300 M -5 240 L 5 240 M -5 180 L 5 180 M -5 119.999985 L 5 119.999985 M -5 60 L 5 60 M -5 0 L 5 0" />
        <path stroke="blue" stroke-linejoin="round" stroke-width="3" d="M 600 0 L 600 300 M 595 300 L 605 300 M 595 240 L 605 240 M 595 180 L 605 180 M 595 120 L 605 120 M 595 60 L 605 60 M 595 0 L 605 0"
            fill="none" />
    </svg>
    <!-- These are needed render svg in browser/ide -->
    <style>
        @font-face {
            font-family: 'Roboto';
            src: url('static/fonts/Roboto-Regular.ttf') format('truetype');
        }

        @font-face {
            font-family: 'Roboto-Regular-Dashed';
            src: url('static/fonts/Roboto-Regular-Dashed.ttf') format('truetype');
        }

        .line {
            stroke: white;
            stroke-width: 2;
            stroke-linecap: round;
            stroke-linejoin: round;
        }
    </style>
</svg>
